Reading Output.json from Downloads location if file exists else from Resource folder